글씨 깜빡임 효과

--- a/JCC_fairytale/Assembly-CSharp.csproj
+++ b/JCC_fairytale/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Script\R_Script\Story\changedialogue.cs" />
     <Compile Include="Assets\Script\R_Script\Story\changeRedHood.cs" />
     <Compile Include="Assets\Script\R_Script\Story\changeWhite.cs" />
+    <Compile Include="Assets\Script\textBlink.cs" />
     <Compile Include="Assets\Script\W_Script\Apple_Control.cs" />
     <Compile Include="Assets\Script\W_Script\AppleGenerator.cs" />
     <Compile Include="Assets\Script\W_Script\AppleGenerator2.cs" />
