--- a/JCC_fairytale/Assembly-CSharp.csproj
+++ b/JCC_fairytale/Assembly-CSharp.csproj
@@ -101,6 +101,8 @@
     <Compile Include="Assets\Script\R_Script\W_Script\AppleGenerator3.cs" />
     <Compile Include="Assets\Script\R_Script\W_Script\BakSul_Control.cs" />
     <Compile Include="Assets\Script\R_Script\W_Script\GameDirector.cs" />
+    <Compile Include="Assets\Script\R_Script\W_Script\Go_ending.cs" />
+    <Compile Include="Assets\Script\R_Script\W_Script\Go_firstStory.cs" />
     <Compile Include="Assets\Script\R_Script\W_Script\WhiteGameAgain.cs" />
     <Compile Include="Assets\Script\R_Script\W_Script\WhiteGameStart.cs" />
     <Compile Include="Assets\Script\R_Script\W_Script\WhiteGameWay.cs" />
