아이템 획득 시 Treasure Scene이미지 변경

--- a/JCC_fairytale/Assembly-CSharp.csproj
+++ b/JCC_fairytale/Assembly-CSharp.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Assets\Script\Sound.cs" />
     <Compile Include="Assets\Script\textBlink.cs" />
     <Compile Include="Assets\Script\TitleScene_Change.cs" />
+    <Compile Include="Assets\Script\Treasure.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>/Users/hwangdayoung/Desktop/JCC_fairytale/JCC_fairytale/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
