빨간모자 스코어 수정

--- a/JCC_fairytale/Assembly-CSharp.csproj
+++ b/JCC_fairytale/Assembly-CSharp.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Assets\Script\R_Script\ChangeRuleScene.cs" />
     <Compile Include="Assets\Script\R_Script\ChangeScene.cs" />
     <Compile Include="Assets\Script\R_Script\Character.cs" />
+    <Compile Include="Assets\Script\R_Script\Ending_Score.cs" />
     <Compile Include="Assets\Script\R_Script\GameManager.cs" />
     <Compile Include="Assets\Script\R_Script\Go_Ending.cs" />
     <Compile Include="Assets\Script\R_Script\Jump.cs" />
